# CV_project_Food_detection

./: .env.example  .gitignore  LICENSE  Makefile  OPENAI_SETUP.md  README.md  SETUP.md  docker-compose.yml
api/: .env.example  Dockerfile  README.md  download_nltk.py  main.py  pyproject.toml  requirements.txt  schemas.py  test_api.py
api/model/: food_classifier.py  loader.py
api/recipes/: indexer.py  openai_generator.py
api/tests/: test_api.py
api/utils/: text_norm.py
data/: recipes.csv  synonyms.json
web/: Dockerfile  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: HistoryDrawer.tsx  IngredientChips.tsx  LoadingOverlay.tsx  RecipeCard.tsx  UploadBox.tsx
web/lib/: api.ts  history.ts
web/tests/: upload.spec.ts
